Fix image path and text spacing between words

--- a/src/app/styles/scrambled.css
+++ b/src/app/styles/scrambled.css
@@ -65,6 +65,11 @@ h1.backstory-title {
     animation-delay: calc(var(--delay)*var(--step-duration) + var(--n)*var(--step-duration));
   }
 
+  .word-space {
+    display: inline-block;
+    width: 1ch;
+  }
+
   .backstory-paragraph {
     display: flex;
     flex-wrap: wrap;
